--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -17,7 +17,7 @@ jobs:
     env:
       REPO_URL: "Ming_Chen_wyj.github.io"  # 远程仓库的 URL
       BUILD_PATH: ".vitepress/dist"  # 构建输出路径
-      CUSTOM_DOMAIN: "ing_Chen_wyj.github.io"  # 自定义域名
+      CUSTOM_DOMAIN: "Ming_Chen_wyj.github.io"  # 自定义域名
 
     steps:
       - name: Set up Node.js
